Fix drop-down menu z-index

--- a/themes/cp_theme_d8/css/menu.css
+++ b/themes/cp_theme_d8/css/menu.css
@@ -58,6 +58,7 @@
     position: relative;
     float: left;
     background: #414042;
+    z-index: 1001;
   }
 
   #cp_theme_d8_menu ul li a {
